--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>quarkushop</finalName>
         <plugins>
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
