chore: Add Tests for cart

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <version>1.15.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jacoco</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>quarkushop</finalName>
