--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,16 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/
 quarkus.flyway.migrate-at-start=true
 
 quarkus.http.root-path=/api
+quarkus.http.test-port=8081
+
+quarkus.datasource.devservices.enabled=true
 
 # Test Datasource config properties
 %test.quarkus.datasource.db-kind=${DATABASE_KIND}
 %test.quarkus.datasource.username=${DATABASE_USERNAME}
 %test.quarkus.datasource.password=${DATABASE_PASSWORD}
-%test.quarkus.datasource.jdbc.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?currentSchema=${DATABASE_SCHEMA_TEST}
 
 # Test Flyway minimal config properties
 %test.quarkus.flyway.migrate-at-start=true
+
+%test.quarkus.http.test-port=9999
