chore: Generate Documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ quarkus.http.test-port=8081
 
 quarkus.datasource.devservices.enabled=true
 
+quarkus.swagger-ui.enable=true
+
 # Test Datasource config properties
 %test.quarkus.datasource.db-kind=${DATABASE_KIND}
 %test.quarkus.datasource.username=${DATABASE_USERNAME}
