--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ quarkus.datasource.devservices.enabled=true
 
 quarkus.swagger-ui.enable=true
 
+quarkus.banner.path=banner.txt
+
 # Test Datasource config properties
 %test.quarkus.datasource.db-kind=${DATABASE_KIND}
 %test.quarkus.datasource.username=${DATABASE_USERNAME}
