--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,11 @@ quarkus.swagger-ui.enable=true
 quarkus.banner.path=banner.txt
 
 # Test Datasource config properties
-%test.quarkus.datasource.db-kind=${DATABASE_KIND}
-%test.quarkus.datasource.username=${DATABASE_USERNAME}
-%test.quarkus.datasource.password=${DATABASE_PASSWORD}
+#%test.quarkus.datasource.db-kind=${DATABASE_KIND}
+#%test.quarkus.datasource.username=${DATABASE_USERNAME}
+#%test.quarkus.datasource.password=${DATABASE_PASSWORD}
+%test.quarkus.datasource.jdbc.driver=org.testcontainers.jdbc.ContainerDatabaseDriver
+%test.quarkus.datasource.jdbc.url=jdbc:tc:postgresql:latest:///test
 
 # Test Flyway minimal config properties
 %test.quarkus.flyway.migrate-at-start=true
