--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>2.2.3.Final</quarkus.platform.version>
         <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+        <sonar.projectKey>nmuianga_quarkushop</sonar.projectKey>
+        <sonar.organization>nmuianga</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <repositories>
         <repository>
