chore: Add lombok.config

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,4 +6,4 @@ dotenv: ['.env']
 tasks:
   static-analyze:
     cmds:
-      - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=nmuianga_quarkushop
+      - mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=nmuianga_quarkushop
